Add img/ directory and edit recipes/carbonara.html

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,5 +6,50 @@
     </head>
     <body>
         <h1>Carbonara</h1>
+        <img src="../img/carbonara.jpg" alt="A delicious plate of carbonara">
+        <h5>A delicous plate of carbonara</h5>
+        <p>Carbonara is an Italian pasta dish from Rome made with eggs,
+            hard cheese, cured pork and black pepper. The dish arrived
+            at it's modern form, with its current name, in the middle
+            of the 20th century.
+        </p>
+        <p>The cheese is usually Pecorino Romano, Parmigiano-Reggiano,
+            or a combinatio of the two. Spaghetti is the most common
+            pasta, but fettuccine, rigatoni, liguine, or bucatini are
+            also used. Normally guanciale or pancetta are used for the
+            meat component, but lardons of smoked bacon are a common
+            substitute outside of italy
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Pecorino Romano</li>
+            <li>Parmigiano-Reggiano</li>
+            <li>pancetta</li>
+            <li>eggs</li>
+            <li>olive oil</li>
+            <li>garlic</li>
+            <li>bucatini</li>
+            <li>salt and pepper</li>
+        </ul>
+        <h3>Instructions</h3>
+        <ol>
+            <li>Put a large pot of salted water on to boil</li>
+            <li>Heat olive oil in large saute pan over medium heat</li>
+            <li>Add pancetta and cook slowly until edges brown</li>
+            <li>Add garlic to pan and cook for another minute and then
+                remove from heat
+            </li>
+            <li>In a small bowl, beat the eggs and mix in half of the cheese</li>
+            <li>When water has reached a rolling boil, add the dry pasta 
+                and cook
+            </li>
+            <li>When the pasta is al dente, reserve some pasta water for
+                later and combine with pancetta and garlic. Allow to cool
+                slightly
+            </li>
+            <li>Add beaten eggs and cheese and toss quickly</li>
+            <li>Add additional pasta water and salt to taste</li>
+            <li>Serve with rest of cheese and gresly ground black pepper</li>
+        </ol>
     </body>
 </html>
