--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Simple Italian Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/carbonara.html">Carbonara</a>
+        <h1>Simple Italian Recipes</h1>
+        <ul>
+            <li><a href="recipes/carbonara.html">Carbonara</a></li>
+            <li><a href="recipes/aglioeolio.html">Aglio e Olio</a></li>
+        </ul>
     </body>
 </html>
