--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/carbonara.html">Carbonara</a></li>
             <li><a href="recipes/aglioeolio.html">Aglio e Olio</a></li>
+            <li><a href="recipes/cacioepepe.html">Cacio e Pepe</a></li>
         </ul>
     </body>
 </html>
