Edit index.html and aglioeolio.html addded styles.css

--- a/recipes/aglioeolio.html
+++ b/recipes/aglioeolio.html
@@ -3,45 +3,50 @@
     <head>
         <meta charset="UTF-8">
         <title>Aglio e Olio</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Aglio e Olio</h1>
-        <img src="../img/aglioeolio.jpg" alt="A really delicious dish of aglio e olio">
-        <h5>Aglio e Olio; a popular Neapolitan late-night dish</h5>
-        <p>Aglio e Olio is a traditional Italian pasta dish from Naples
-            It is a typical dish of Neapolitan cuisine that is widely 
-            popular with late-night crowds. This popularity can be
-            attributed to it being simple to prepare and the fact that
-            it makes use of inexpensive, readily available ingredients
-            that have long shelf lives in a pantry.
-        </p>
-        <p>Simple and quick in its preperation and big in umami, Aglio e
-            Olio is popular late-night snack for revelers returning home
-            after a night out. The dish even makes for an excellent
-            hangover breakfast if any leftovers remain.
-        </p>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>olive oil</li>
-            <li>pasta (typically spaghetti)</li>
-            <li>garlic</li>
-            <li>red pepper flakes</li>
-            <li>fresh parsley</li>
-            <li>Parmigiano-Reggiano</li>
-            <li>salt</li>
-        </ul>
-        <h3>Instructions</h3>
-        <ol>
-            <li>Bring large pot of water to a boil add salt and pasta</li>
-            <li>Heat olive oil over medium heat and saute garlic</li>
-            <li>Add red pepper flakes and saute for an additional minute</li>
-            <li>Scoop some pasta water from pot and add to garlic and oil</li>
-            <li>Boil mixture and add salt reducing by a third</li>
-            <li>Add drained pasta and remove from heat</li>
-            <li>Add parsley and Parmigiano-Reggiano to taste</li>
-            <li>Serve warm with extra cheese on the side</li>
-        </ol>
+        <h1 class="maintitle">Aglio e Olio</h1>
+        <div>
+            <img src="../img/aglioeolio.jpg" alt="A really delicious dish of aglio e olio">
+        </div>
+        <div>
+            <h5>Aglio e Olio; a popular Neapolitan late-night dish</h5>
+            <p>Aglio e Olio is a traditional Italian pasta dish from Naples
+                It is a typical dish of Neapolitan cuisine that is widely 
+                popular with late-night crowds. This popularity can be
+                attributed to it being simple to prepare and the fact that
+                it makes use of inexpensive, readily available ingredients
+                that have long shelf lives in a pantry.
+            </p>
+            <p>Simple and quick in its preperation and big in umami, Aglio e
+                Olio is popular late-night snack for revelers returning home
+                after a night out. The dish even makes for an excellent
+                hangover breakfast if any leftovers remain.
+            </p>
+            <h3>Ingredients</h3>
+            <ul>
+                <li>olive oil</li>
+                <li>pasta (typically spaghetti)</li>
+                <li>garlic</li>
+                <li>red pepper flakes</li>
+                <li>fresh parsley</li>
+                <li>Parmigiano-Reggiano</li>
+                <li>salt</li>
+            </ul>
+            <h3>Instructions</h3>
+            <ol>
+                <li>Bring large pot of water to a boil add salt and pasta</li>
+                <li>Heat olive oil over medium heat and saute garlic</li>
+                <li>Add red pepper flakes and saute for an additional minute</li>
+                <li>Scoop some pasta water from pot and add to garlic and oil</li>
+                <li>Boil mixture and add salt reducing by a third</li>
+                <li>Add drained pasta and remove from heat</li>
+                <li>Add parsley and Parmigiano-Reggiano to taste</li>
+                <li>Serve warm with extra cheese on the side</li>
+            </ol>
+        </div>
     </body>
 
 </html>
