--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Simple Italian Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Simple Italian Recipes</h1>
-        <ul>
-            <li><a href="recipes/carbonara.html">Carbonara</a></li>
-            <li><a href="recipes/aglioeolio.html">Aglio e Olio</a></li>
-            <li><a href="recipes/cacioepepe.html">Cacio e Pepe</a></li>
-        </ul>
+        <h1 class="maintitle">Simple Italian Recipes</h1>
+        <div>
+            <ul>
+                <li class="listitem"><a href="recipes/carbonara.html">Carbonara</a></li>
+                <li class="listitem"><a href="recipes/aglioeolio.html">Aglio e Olio</a></li>
+                <li class="listitem"><a href="recipes/cacioepepe.html">Cacio e Pepe</a></li>
+            </ul>
+        </div>
     </body>
 </html>
