edit css index aglio cacio carbonara

--- a/recipes/cacioepepe.html
+++ b/recipes/cacioepepe.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Cacio e Pepe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     
     <body>
-        <h1>Cacio e Pepe</h1>
-        <img src="../img/cacioepepe.jpg" alt="Yet another delcious pasta dish; Cacio e Pepe">
-        <h5>Cacio e Pepe; the Roman minimalist's mac and cheese</h5>
+        <h1 class="maintitle">Cacio e Pepe</h1>
+        <div>
+            <img src="../img/cacioepepe.jpg" alt="Yet another delcious pasta dish; Cacio e Pepe">
+            <h5>Cacio e Pepe; the Roman minimalist's mac and cheese</h5>
+        </div>
         <p>Cacio e Pepe is a pasta dish from the cuisine of the city of
             Rome. The dishes name quite literally means cheese and pepper.
             In keeping with its name, the dish contains grated Pecorino
