--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Carbonara</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Carbonara</h1>
-        <img src="../img/carbonara.jpg" alt="A delicious plate of carbonara">
-        <h5>A delicous plate of carbonara</h5>
+        <h1 class="maintitle">Carbonara</h1>
+        <div>
+            <img src="../img/carbonara.jpg" alt="A delicious plate of carbonara">
+            <h5>A delicous plate of carbonara</h5>
+        </div>
         <p>Carbonara is an Italian pasta dish from Rome made with eggs,
             hard cheese, cured pork and black pepper. The dish arrived
             at it's modern form, with its current name, in the middle
