--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1 class="maintitle">Simple Italian Recipes</h1>
         <div>
-            <ul>
+            <ul class="titlelist">
                 <li class="listitem"><a href="recipes/carbonara.html">Carbonara</a></li>
                 <li class="listitem"><a href="recipes/aglioeolio.html">Aglio e Olio</a></li>
                 <li class="listitem"><a href="recipes/cacioepepe.html">Cacio e Pepe</a></li>
