Updated image width

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -8,7 +8,7 @@
     <body>
         <h1 class="maintitle">Carbonara</h1>
         <div>
-            <img src="../img/carbonara.jpg" alt="A delicious plate of carbonara">
+            <img class="titleimage" src="../img/carbonara.jpg" alt="A delicious plate of carbonara">
             <h5>A delicous plate of carbonara</h5>
         </div>
         <p>Carbonara is an Italian pasta dish from Rome made with eggs,
