--- a/recipes/aglioeolio.html
+++ b/recipes/aglioeolio.html
@@ -9,7 +9,7 @@
     <body>
         <h1 class="maintitle">Aglio e Olio</h1>
         <div>
-            <img src="../img/aglioeolio.jpg" alt="A really delicious dish of aglio e olio">
+            <img class="titleimage" src="../img/aglioeolio.jpg" alt="A really delicious dish of aglio e olio">
         </div>
         <div>
             <h5>Aglio e Olio; a popular Neapolitan late-night dish</h5>
