--- a/recipes/cacioepepe.html
+++ b/recipes/cacioepepe.html
@@ -9,7 +9,7 @@
     <body>
         <h1 class="maintitle">Cacio e Pepe</h1>
         <div>
-            <img src="../img/cacioepepe.jpg" alt="Yet another delcious pasta dish; Cacio e Pepe">
+            <img class="titleimage" src="../img/cacioepepe.jpg" alt="Yet another delcious pasta dish; Cacio e Pepe">
             <h5>Cacio e Pepe; the Roman minimalist's mac and cheese</h5>
         </div>
         <p>Cacio e Pepe is a pasta dish from the cuisine of the city of
